tests/lime/fail/tokens/label_rest/byte_47.wsa
jmp .l/ .l/: push 47
